infra-setup/nephio-webui/0-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    internal.kpt.dev/upstream-identifier: '|Namespace|default|nephio-webui'
  labels:
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: privileged
  name: nephio-webui
